2005-02-02  Daniel Jacobowitz  <dan@codesourcery.com>

	* ld-mips-elf/eh-frame3.d, ld-mips-elf/eh-frame4.d: Move comments
	after test commands.
	* ld-mips-elf/mips-elf.exp: Skip multi-got-1 on non-GNU/Linux
	systems.

2005-02-01  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tlsso.r: Update.
	* ld-powerpc/tlstocso.r: Update.

2005-01-31  Daniel Jacobowitz  <dan@codesourcery.com>

	* ld-mips-elf/elf-rel-got-n32.d, ld-mips-elf/elf-rel-got-n64-linux.d,
	ld-mips-elf/elf-rel-got-n64.d, ld-mips-elf/elf-rel-xgot-n32.d,
	ld-mips-elf/elf-rel-xgot-n64-linux.d, ld-mips-elf/elf-rel-xgot-n64.d,
	ld-mips-elf/jalbal.d: Force big-endian.
	* ld-mips-elf/multi-got-1.d: Make more flexible.
	* ld-mips-elf/rel32-n32.d, ld-mips-elf/rel32-o32.d,
	ld-mips-elf/rel64.d: Update offsets.

2005-01-31  Daniel Jacobowitz  <dan@codesourcery.com>

	* ld-elf/group1.d: Accept OBJECT symbols.

2005-01-31  Richard Sandiford  <rsandifo@redhat.com>

	* ld-mips-elf/eh-frame1.s: Create a .gcc_compiled_long32 if using
	32-bit pointers.
	* ld-mips-elf/eh-frame1.d: Link in .gcc_compiled_long32 sections.
	* ld-mips-elf/eh-frame[34].d: New tests.
	* ld-mips-elf/mips-elf.exp: Run them.

2005-01-28  Jan Beulich  <jbeulich@novell.com>

	* ld/ia64/tlsbin.[rt]d: Widen expected offset/size ranges.
	* ld/ia64/tlspic.[rt]d: Likewise.

2005-01-25  Alexandre Oliva  <aoliva@redhat.com>

	* ld-frv/fdpic.exp: Add -mfdpic to ASFLAGS.
	* ld-frv/tls.exp: Likewise.
	2004-11-26  Alexandre Oliva  <aoliva@redhat.com>
	* ld-frv/tls-3.s: New.
	* ld-frv/tls-static-3.d: New.
	* ld-frv/tls-dynamic-3.d: New.
	* ld-frv/tls-pie-3.d: New.
	* ld-frv/tls-shared-3.d: New.
	* ld-frv/tls-relax-static-3.d: New.
	* ld-frv/tls-relax-dynamic-3.d: New.
	* ld-frv/tls-relax-pie-3.d: New.
	* ld-frv/tls-relax-shared-3.d: New.
	* ld-frv/tls.exp: Run the new tests.
	* ld-frv/tls-dynamic-2.d: Adjust for improved relaxation.
	* ld-frv/tls-relax-dynamic-2.d: Likewise.
	* ld-frv/tls-relax-initial-shared-2.d: Likewise.